style: margins on pc

--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
@@ -20,7 +20,7 @@
     </div>
     <button id="search">Pesquisar</button>
   </section>
-    <section id="currency-container">
+    <section id="currency-section">
       <h1 id="result"></h1>
       <ul id="currency-ul">
       </ul>
