style: english names

--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-3-pratica-casa-de-cambio/index.html
@@ -15,8 +15,8 @@
   <main>
     <section class="currency-form-container">
       <div class="currency-form">
-      <label for="moeda">Digite a moeda:</label>
-      <input id="moeda" type="text" placeholder="USD">
+      <label for="currency">Digite a moeda:</label>
+      <input id="currency" type="text" placeholder="USD">
     </div>
     <button id="search">Pesquisar</button>
   </section>
