--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/super-heroes/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/super-heroes/index.html
@@ -7,6 +7,11 @@
   <title>Super Heroes</title>
 </head>
 <body>
+  <main>
+    <h1>SuperHeroes</h1>
+    <img src="" alt="SuperHeroe">
+    <button type="button"></button>
+  </main>
   
   <script type="module" src="./src/main.js"></script>
 </body>
