--- a/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/super-heroes/index.html
+++ b/2-front-end/1-introducao-ao-frontend-e-javascript-assincrono/dia-2-javascript-assincrono-promises-e-fetch/super-heroes/index.html
@@ -9,8 +9,9 @@
 <body>
   <main>
     <h1>SuperHeroes</h1>
-    <img src="" alt="SuperHeroe">
-    <button type="button">Sortear</button>
+    <img id="image" src="" alt="SuperHeroe">
+    <button id="button" type="button">Sortear</button>
+    <p id="name"></p>
   </main>
   
   <script type="module" src="./src/main.js"></script>
