--- a/2-front-end/7-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/redux-vanilla/index.html
+++ b/2-front-end/7-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/redux-vanilla/index.html
@@ -9,7 +9,7 @@
 <body>
   <main>
     <h1>Contador</h1>
-    <h2>0</h2>
+    <h2 id="counter">0</h2>
     <button>Incrementar</button>
   </main>
   <script type="module" src="./index.js"></script>
