build: initial state

--- a/2-front-end/7-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/exercise-1/index.html
+++ b/2-front-end/7-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/exercise-1/index.html
@@ -32,11 +32,6 @@
       <button id="previous">Previous color</button>
       <button id="next">Next color</button>
     </div>
-    <script>
-      const INITIAL_STATE = {
-        colors: ['white', 'black', 'red', 'green', 'blue', 'yellow'],
-        index: 0,
-      };
-    </script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
