--- a/2-front-end/7-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/exercise-2/index.html
+++ b/2-front-end/7-gerenciamento-de-estado-com-redux/dia-1-introducao-ao-redux-o-estado-global-da-aplicacao/exercise-2/index.html
@@ -21,22 +21,6 @@
       <button id="toggle-theme">Light Mode</button>
       <button id="toggle-status">Ficar Online</button>
     </div>
-    <script>
-      const INITIAL_STATE = {
-        status: 'offline',
-        theme: 'dark',
-      };
-
-      const themeButton = document.getElementById('toggle-theme');
-      const statusButton = document.getElementById('toggle-status');
-
-      themeButton.addEventListener('click', () => {
-        // coloque o código aqui.
-      });
-
-      statusButton.addEventListener('click', () => {
-        // coloque o código aqui.
-      });
-    </script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
